--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Alcoholic</title>
-    
+    <meta name="google-site-verification" content="P7VDf2puxFJ58vJ0n2K97xujqA03r3nVFPJJ3oRMDF8" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
