--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
     <title>Alcoholic</title>
     <meta name="google-site-verification" content="P7VDf2puxFJ58vJ0n2K97xujqA03r3nVFPJJ3oRMDF8" />
     <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J0GT4G8XVN"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z12FXTBRVW"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-J0GT4G8XVN');
+    gtag('config', 'G-Z12FXTBRVW');
   </script>
   </head>
   <body>
